# Sabi

./: Cargo.toml  README.md  diesel.toml  download_songs.sh  ingest_all.sh  song_list.txt  test.sh
migrations/2025-09-16-203052-0000_fingerprint/: down.sql  up.sql
scripts/: download_songs.sh  ingest_all.sh  test.sh
src/: audio_processor.rs  db.rs  fingerprint.rs  main.rs  schema.rs  tester.rs  visualization.rs
src/audio_processor/: audio_processor.rs
src/db/: bindings.rs  connector.rs
src/fft/: complex.rs  fft.rs
